2002-06-26  Yoshiyuki ONOUE  <onoue@ipl.t.u-tokyo.ac.jp>

	* w3m.el (toplevel): Relax the pattern to detect w3m version.
	
2002-06-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.8.

2002-06-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-resume-form): Fix the last wrong change.

2002-06-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.7.

	* w3m-form.el (w3m-resume-form): Ad-hoc fix to avoid
	wrong-type-argument error.

	* w3m-macro.el (w3m-insert-string): Import from w3m-util.el on
	main trunk.

	* Merge fixes of the shimbun module on the main trunk.

	* w3m-weather.el: Require CL when this module is byte-compiled.
	(w3m-weather-completion-table): Merge changes on main trunk.

2002-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (tarball): Chmod 755 configure.

2002-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Check for the validity on APEL.

2002-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-history-current-url-face): Provide `font' temporally
	to avoid loading it and `cl'.

2002-04-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put a property of
	`w3m-name-anchor' as a list.
	(w3m-goto-url-localcgi-movepoint): Use `w3m-search-name-anchor'.
	(w3m-search-name-anchor): Use `member' when compare a name with
	`w3m-name-anchor'. Fix continuous name-anchor.

2002-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-at-point (ffap)): Strip text props under XEmacs.
	(ffap-url-regexp): Modify the value to make it match to https urls
	for Emacs 19, 20 and XEmacs.

2002-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-find-coding-system): Alias to ignore if the
	function `find-coding-system' is not available.
	(w3m-make-ccl-coding-system): Check whether the function
	`make-ccl-coding-system' is available instead of checking the