@@ -1,3 +1,8 @@
+2002-06-27  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-fontify-anchors): Put `w3m-name-anchor' property to
+	point-max().
+
 2002-06-26  Yoshiyuki ONOUE  <onoue@ipl.t.u-tokyo.ac.jp>
 
 	* w3m.el (toplevel): Relax the pattern to detect w3m version.
